# TradingBot

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  auditor.py  auditor_biumolo.py  auditor_biumolo_pro_v2.py  backtest_biumolo_v22.py  prepare_massive_nq.py  pyproject.toml  requirements.txt  run.bat  run_backtest_v23.py  run_checker_pro.py  server.py  test_telegram.py
analysis_reports/: alternate_dispatch_path_audit_pr41.md  alternate_dispatch_path_refs_pr41.txt  biumolo_senal_interna_vs_trade_real.md  blocked_dispatch_internal_trade_reproduction_pr42.md  execution_chain_post_pr20_audit.md  historical_playback_audit_only_processor_plan.md  historical_playback_data_import_plan.md  internal_websocket_smoke.md  playback_audit_runner_scope.md  playback_real_data_shadow_vs_real_audit.md  post_pr27_signal_quality_audit_plan.md  post_pr27_signal_quality_session_20260709_051536.md  pre_sim101_config_risk_checklist.md  pre_sim101_current_config_evidence.md  pre_sim101_readiness_checklist_post_pr30.md  runtime_guard_block_evidence_pre_sim101.md  runtime_guard_code_trace_pre_sim101.md  runtime_guard_code_trace_refs_pr39.txt  runtime_guard_dispatch_evidence_pre_sim101.md  runtime_guard_dispatch_path_inspection_pre_sim101.md  server_startup_smoke.md  server_startup_smoke_diagnostics.json  shadow_entry_ready_16_cases.csv  shadow_vs_real_audit_done.md  shadow_vs_real_post_pr19_audit.md  sim101_dry_run_controlled.json  sim101_go_no_go.md  sim101_operational_readiness_checklist.md  sim101_session_controller.md  sim101_session_controller_controlled.json  (+2 more)
core/: api.py  (+54 more)
(+122 files in other folders)
