[project]
name = "biumolo"
version = "0.2.0"
description = "NQ market-signal research and delivery prototype"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn==0.49.0",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
]

[tool.setuptools.packages.find]
include = ["core*"]

